[tool.poetry]
name = "poetry-env"
version = "0.1.0"
description = ""
authors = ["ABEL <abelovearn@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_env"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
